# aoc-2020

./: fixture.ml  rad.ts  readme.md
day10/: bin.ml  dune  input.sorted.txt  p1.ml  p2.ml  test.ml
day11/: bin.ml  p1.ml  p2.ml
day12/: dune  p1.ml  p2.ml
day13/: .gitignore  p1.ml  p2.ml
day14/: bin.ml  p1.ml  p2.ml  test.ml
day15/: p1.ml
day16/: dune  p1.ml  p2.lp.ml  p2.ml
day7/: bin.ml  dune  lib.ml  p1.ml  p2.ml  test.ml
day8/: p1.ml  p2.ml
day9/: p1.ml  p2.ml
template/: bin.ml  dune
