(executable
 (name bin)
 (modules bin)
 (libraries p1 p2)
 (preprocess (pps ppx_string ppx_deriving.show)))

(library
 (modules p1)
 (name p1)
 (libraries base containers fixture)
 (preprocess (pps ppx_string ppx_deriving.show))
 )

(library
 (modules p2)
 (name p2)
 (libraries base containers fixture lp lp-glpk lp-gurobi)
 (flags -cclib -lglpk)
; For compilers to find openblas you may need to set:
;   export LDFLAGS="-L/usr/local/opt/openblas/lib"
;   export CPPFLAGS="-I/usr/local/opt/openblas/include"

; For pkg-config to find openblas you may need to set:
;   export PKG_CONFIG_PATH="/usr/local/opt/openblas/lib/pkgconfig"
 (preprocess (pps ppx_string ppx_deriving.show))
 )

(library
 (modules fixture)
 (name fixture)
 (preprocess (pps ppx_string ppx_deriving.show)))

(tests
 (names test)
 (modules test)
 (libraries alcotest p1 p2)
 (preprocess (pps ppx_string ppx_deriving.show))
)

(alias
 (name runtest)
 (deps test.exe))
