(executable
 (name bin)
 (modules bin)
 (libraries p1 p2))

(library
 (modules p1)
 (name p1)
 (libraries base containers fixture))

(library
 (modules p2)
 (name p2)
 (libraries base containers fixture))

(library
 (modules fixture)
 (name fixture))

(tests
 (names test)
 (modules test)
 (libraries alcotest p1 p2))


(alias
 (name runtest)
 (deps test.exe))
